--- a/default.css
+++ b/default.css
@@ -7,7 +7,7 @@ h1{
     text-align: center;
 }
 
-#ProfilePic{
+.ProfilePic{
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -16,4 +16,69 @@ h1{
     border-radius: 25px;
     align-content: center;
     
+}
+
+.nav_bar{
+    background-color: goldenrod;
+    list-style-type: none;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    overflow: hidden;
+}
+
+.nav_bar_items{
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+
+  li a:hover {
+    background-color: #111;
+  }
+
+  .column1{
+      float: left;
+      padding: 10px;
+      height: 380px;
+  }
+
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .left1{
+      width: 60%; 
+  }
+
+  .right1{
+      width: 30%;
+  }
+
+  .webPageDuctPic{
+      height: 100%;
+      width:100%
+  }
+
+  .column2{
+    float: left;
+    padding: 10px;
+    height: 380px;
+}
+
+.left2{
+    width: 30%; 
+}
+
+.right2{
+    float: right;
+    width: 60%;
 }
