--- a/default.css
+++ b/default.css
@@ -1,84 +1,124 @@
-body{
-    background-color: #dddfd4;
+body {
+  background-color: #dddfd4;
 }
 
-h1{
-    color: #173e43;
-    text-align: center;
+h1 {
+  color: #173e43;
+  text-align: center;
 }
 
-.ProfilePic{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 10%;
-    width: 25%;
-    border-radius: 25px;
-    align-content: center;
-    
+.ProfilePic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 10%;
+  width: 25%;
+  border-radius: 25px;
+  align-content: center;
 }
 
-.nav_bar{
-    background-color: goldenrod;
-    list-style-type: none;
-    margin: 0px 0px;
-    padding: 0px 0px;
-    overflow: hidden;
+.nav_bar {
+  background-color: goldenrod;
+  list-style-type: none;
+  margin: 0px 0px;
+  padding: 0px 0px;
+  overflow: hidden;
 }
 
-.nav_bar_items{
-    float: left;
+.nav_bar_items {
+  float: left;
 }
 
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-
-  li a:hover {
-    background-color: #111;
-  }
-
-  .column1{
-      float: left;
-      padding: 10px;
-      height: 380px;
-  }
-
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  .left1{
-      width: 60%; 
-  }
-
-  .right1{
-      width: 30%;
-  }
-
-  .webPageDuctPic{
-      height: 100%;
-      width:100%
-  }
-
-  .column2{
-    float: left;
-    padding: 10px;
-    height: 380px;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.left2{
-    width: 30%; 
+li a:hover {
+  background-color: #111;
+}
+/*Style the different Columns in About page */
+.column1 {
+  float: left;
+  padding: 10px;
+  height: 380px;
 }
 
-.right2{
-    float: right;
-    width: 60%;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.left1 {
+  width: 60%;
+}
+
+.right1 {
+  width: 30%;
+}
+
+.webPageDuctPic {
+  height: 100%;
+  width: 100%;
+}
+
+.column2 {
+  float: left;
+  padding: 10px;
+  height: 380px;
+}
+
+.left2 {
+  width: 30%;
+}
+
+.right2 {
+  float: right;
+  width: 60%;
+} /* End styling for colummns in about page */
+
+/*Styling for the Font Awesome Icons */
+
+.fa {
+  size: 100%;
+  margin-left: 5px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7 !important;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+  margin-right: 15px;
+}
+
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.social_media_buttons {
+  float: right;
+}
+/*End Font awesome styling */
+
+/*Beginning of styling for project lay out */
+.flex-container {
+  display: flex;
+  justify-content: center;
+}
+.flex-container > div {
+  width: 30%;
+  height: 30%;
+  margin: 5px;
+}
+.flex_images {
+  height: 50%;
+  width: 50%;
 }
