--- a/default.css
+++ b/default.css
@@ -98,7 +98,7 @@ li a:hover {
   margin: 5px;
 }
 .flex_images {
-  height: 50%;
+  height: 225px;
   width: 50%;
 }
 
@@ -138,4 +138,5 @@ li a:hover {
   padding-top: 10px;
   background-color: goldenrod;
   text-align: center;
+  position: fixed;
 }
