--- a/default.css
+++ b/default.css
@@ -1,142 +1,212 @@
-body {
-  background-color: #dddfd4;
+body{
+  margin:auto;
+  background-color: #474b4f;
+  color: #fffff0;
+  padding: 0;
 }
-
-h1 {
-  color: #173e43;
+header{
+  background-color: #121212;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  vertical-align: middle;
+  height: 100px;
+  position: fixed;
+  width: 100%;
+}
+.navBar{
+  display: flex;
+  overflow: hidden;
+  height: fit-content;
+  align-items: center;
+  margin-left: -10px;
+}
+.navBar a{
+  color: #ffffff;
+  text-decoration: none;
+  padding:25px 25px;
+  font-size: large;
+}
+.navBar i {
+  padding: 0px 5px;
+}
+.navBar a:hover{
+  color: #86c232;
+  font-size: x-large;
+  transition: 1s;
+}
+.topPic{
+  display: flex;
+}
+.topPic H2{
+  margin-top: 10px;
+  margin-right: 20px;
+  padding: 15px;
   text-align: center;
 }
-
-.ProfilePic {
+.profilePic{
+  height: 80px;
+  width: 80px;
+  margin-right: 30px;
+  margin-top: 5px;
+  border-radius: 50%;
+}
+#mySKillsTitle{
+  text-align: center;
+  text-decoration: underline;
+}
+.aboutMe{
+  display: flex;
+  align-content: center;
+  width: 90%;
+  margin: auto;
+  padding: 15px;
+}
+.aboutMeRight, .aboutMeLeft{
+  flex: 50%;
+  flex-wrap: wrap;
+  padding: 0px 30px;
+  border: #86c232;
+  border-style: solid;
+}
+.aboutMeLeft h1, .aboutMeRight h1{
+text-decoration: underline;
+}
+.toolsContainers{
+  display: flex;
+  flex-wrap: wrap;
+}
+.tools{
+padding: 12px;
+background-color: #61892f;
+margin: 10px 10px;
+border-radius: 25%;
+}
+.projectSection h1{
+  text-align: center;
+}
+.projectContainer{
+  display: flex;
+  flex-wrap: wrap;
+  padding:15px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.projectContainer h3{
+  text-align: center;
+}
+.project{
+  max-width:250px;
+}
+.projectPic{
+  width: 200px;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 10%;
-  width: 25%;
-  border-radius: 25px;
-  align-content: center;
 }
 
-.nav_bar {
-  background-color: goldenrod;
-  list-style-type: none;
-  margin: 0px 0px;
-  padding: 0px 0px;
-  overflow: hidden;
-}
-
-.nav_bar_items {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-.social_media_buttons {
-  float: right;
-  margin: 0px 15px;
-}
-/*Style the different Columns in About page */
-.column1 {
-  float: left;
-  padding: 10px;
-  height: 380px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.left1 {
-  width: 60%;
-}
-
-.right1 {
-  width: 30%;
-}
-
-.webPageDuctPic {
-  height: 100%;
-  width: 100%;
-}
-
-.column2 {
-  float: left;
-  padding: 10px;
-  height: 380px;
-}
-
-.left2 {
-  width: 30%;
-}
-
-.right2 {
-  float: right;
-  width: 60%;
-} /* End styling for colummns in about page */
-
-/*Beginning of styling for project lay out */
-.flex-container {
+.intro{
   display: flex;
-  justify-content: center;
+  padding: 25px;
+}
+.mainIntro{
+  margin: auto;
   text-align: center;
 }
-.flex-container > div {
-  width: 30%;
-  height: 30%;
-  margin: 5px;
+.socialMediaBar{
+  margin-top: 13%;
+  margin-bottom: 10%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
-.flex_images {
-  height: 225px;
-  width: 50%;
+.socialMediaBar i{
+  color: #ffffff;
+  font-size: x-large;
+  padding: 12px;
+  margin: auto;
 }
-
-/*Styling for the Font Awesome Icons */
-
-.fa {
+.socialMediaBar .fa{
+  background-color: #86c232;
+  margin: 10px;
   border-radius: 50%;
+  transition: transform 1.5s;
 }
-
-.fa:hover {
-  opacity: 0.7;
+.socialMediaBar .fa:hover{
+  font-size: xx-large;
+  transform: rotate(360deg);
 }
-
-.fa-facebook {
-  background: #3b5998;
-  color: white;
-  margin-right: 15px;
+.footer{
+  background-color: #121212;
+  height: 225px;
+  max-height: max-content;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
-
-.fa-twitter {
-  background: #55acee;
-  color: white;
-  size: 50px;
+.footerContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
 }
-
-.fa-github {
-  background: black;
-  color: white;
+.footerRight, .footerLeft{
+  padding: 0px 40px;
+  flex-wrap: wrap;
 }
-/*End Font awesome styling */
-
-/*Footer Styling*/
-.footer {
-  height: fit-content;
-  width: 100%;
-  margin: 0;
-  padding-top: 10px;
-  background-color: goldenrod;
+.footerRight{
+text-align: center;
+}
+.socialFooter .fa{
+  font-size: x-large;
+  color: #ffffff;
+  padding: 10px;
+  background-color: #86c232;
+  margin: 12px;
+  border-radius: 75%;
+  transition: transform 1.5s;
+  flex-wrap: wrap;
+}
+.socialFooter .fa:hover{
+  font-size: xx-large;
+  transform: rotate(360deg);
+}
+.footerBottom{
+  width:80%;
+  padding: 10px;
+  margin:auto;
   text-align: center;
-  position: fixed;
+  border-top-style: solid;
+}
+.footerBottom a{
+  color: #ffffff;
+}
+@media only screen and (min-width:601px) {
+  #menuIcon{
+    display: none;
+  }
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .intro{
+    flex: 50%;
+  }
+  .socialMediaBar .fa{
+    font-size: medium;
+    margin-left: -10px;
+  }
+  .aboutMe{
+    flex-direction: column;
+  }
+  .footer{
+    height: auto;
+  }
+  .footerContainer {
+    flex-direction: column;
+    text-align: center;
+  }
+  .socialFooter .fa, h1,h3, h4 {
+    font-size: medium;
+  }
 }
